# string-instrument

./: .gitignore  CMakeLists.txt  LICENSE  README.md
plugins/au/Contents/: Info.plist
plugins/clap/: README.md
plugins/dsp/: UPFS_IMPLEMENTATION_REPORT.md  test_string_preset.cpp  test_upfs_preset.cpp
plugins/dsp/docs/: ADVANCED_PHYSICS_IMPLEMENTATION.md
plugins/dsp/docs/plans/: GIANT_INSTRUMENT_IMPLEMENTATION.md  KANE_MARCO_AETHER_IMPLEMENTATION.md  KANE_MARCO_AETHER_PRESETS.md  KANE_MARCO_AETHER_PRESET_LOADING_GUIDE.md  KANE_MARCO_AETHER_RESEARCH.md  KANE_MARCO_AETHER_STRING_RESEARCH.md  KANE_MARCO_AETHER_WEEK1_PROGRESS.md  KANE_MARCO_AETHER_WEEK5_COMPLETE.md  KANE_MARCO_AETHER_WEEK_4_SUMMARY.md  KANE_MARCO_AETHER_WEEK_5_COMPLETION_REPORT.md  KANE_MARCO_FAMILY_FINAL_COMPLETION_REPORT.md  KANE_MARCO_FAMILY_WEEK1_STATUS.md  KANE_MARCO_FAMILY_WEEK2_STATUS.md  KANE_MARCO_FAMILY_WEEK3_STATUS.md  KANE_MARCO_FAMILY_WEEK4_STATUS.md
plugins/dsp/include/dsp/: AetherPureDSP.h  KaneMarcoPureDSP.h  StringPureDSP.h
plugins/dsp/include/plugin/: KaneMarcoPluginProcessor.h
plugins/dsp/presets/: aether_giant_instrument_ir.json
plugins/dsp/presets/Aether/: 01_Ethereal_Atmosphere.json  02_Ghostly_Whispers.json  03_Metallic_Dreams.json  04_Breathing_Space.json  05_Crystal_Cavern.json  06_Tension_Builder.json  07_Mystery_Revealed.json  08_Dark_Secret.json  09_SciFi_Encounter.json  10_Emotion_Swell.json  11_Organic_Rustle.json  12_Wind_Through_Trees.json  13_Water_Drops.json  14_Gravel_Crunch.json  (+6 more)
plugins/standalone/Contents/: Info.plist
plugins/vst/Contents/: Info.plist
(+103 files in other folders)
